apps/base/python-rest-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-python
  labels:
    name: service-app-python
    app: app-python
spec:
  selector:
    name: app-python 
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: 5000
     protocol: TCP
