apps/base/python-rest-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-python
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
       paths:
         - pathType: Prefix
           path: "/python" 
           backend:
             service:
               name: service-app-python
               port:
                 number: 80
